<resources>
    <string name="app_name">Navigation dan API</string>
    <string name="title_home">Profile</string>
    <string name="finished">Finished</string>
    <string name="up_coming">Up Coming</string>
    <string name="buka_link">Buka Link</string>
    <string name="register">Register</string>
    <string name="picture_thumbnil">Picture thumbnil</string>
    <string name="event_date">Tanggal Acara</string>
    <string name="event_location">Lokasi Acara</string>
    <string name="event_details_not_found">Detail acara tidak ditemukan</string>
    <string name="favorite">Favorite</string>
    <string name="save_favorite">Save Favorite</string>
    <string name="settings">Settings</string>
    <string name="halaman_settings">Halaman Settings</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
</resources>
