<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/icon_upcoming"
        android:title="@string/up_coming"
        />
    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/icon_finished"
        android:title="@string/finished"
        />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/icon_favorite"
        android:title="@string/favorite"
        />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings"/>

</menu>